修改markdown引擎为kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 permalink:   none
 lsi:         false
 highlighter: pygments
-markdown:    rdiscount
+#markdown:    rdiscount
+markdown:    kramdown
 rdiscount:   { extensions: [smart] }
 exclude:
   - Gemfile
