Change markdown parser to kramdown
1.change the markdown parser to kramdown.
2.fix some bugs for using sidebar.

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,16 @@
 permalink:   none
 lsi:         false
-highlighter: pygments
+#highlighter: pygments
 #markdown:    rdiscount
+highlighter: rouge
 markdown:    kramdown
-rdiscount:   { extensions: [smart] }
+kramdown:
+  input: GFM
+  extensions:
+    - autolink
+    - footnotes
+    - smart
+#rdiscount:   { extensions: [smart] }
 exclude:
   - Gemfile
   - Gemfile.lock
